--- a/_layouts/post.liquid
+++ b/_layouts/post.liquid
@@ -60,9 +60,17 @@ layout: default
 
   <article class="post-content">
     {% if page.toc and page.toc.beginning %}
-      <div id="table-of-contents">
-        {% toc %}
-      </div>
+      <nav id="table-of-contents">
+        <ul>
+          {% assign headers = content | split: '<h2' %}
+          {% for h in headers offset:1 %}
+            {% assign title = h | split: '</h2>' | first | split: '>' | last %}
+            <li>
+              <a href="#{{ title | slugify }}">{{ title }}</a>
+            </li>
+          {% endfor %}
+        </ul>
+      </nav>
       <hr>
     {% endif %}
     <div id="markdown-content">
